<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/loginTop"
        style="@style/title_relayout" >

         <Button
            android:id="@+id/loginBack"
            style="@style/back_btn" />

        <TextView
            android:id="@+id/loginBackText"
            style="@style/back_text"
            android:layout_toRightOf="@+id/loginBack" />
        <TextView
            android:id="@+id/loginTitle"
            style="@style/title_text"
            android:text="@string/login" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/loginUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/login"
        android:src="@drawable/tou" />

    <LinearLayout
        android:id="@+id/loginli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginUser"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/loginId"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/id"
            android:textColorHint="#CDCDC1"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/loginline"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D7D7D7"
            android:orientation="vertical" >
        </LinearLayout>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#CDCDC1"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/loginli"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_bg"
        android:includeFontPadding="false"
        android:text="@string/login"
        android:textColor="#ffffff" />
    <Button
        android:id="@+id/loginChangePw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:includeFontPadding="false"
        android:background="#00000000"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:text="@string/changepw"
        android:textSize="14sp" 
        android:textColor="@color/app_base" />

    <Button
        android:id="@+id/loginMissps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:background="#00000000"
        android:text="@string/misspassword"
        android:textColor="@color/app_base"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginNewUser"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginBtn"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:background="@drawable/btn_newuser_bg"
        android:text="@string/newuser"
        android:textColor="@color/app_base"
        android:textSize="14sp" />

</RelativeLayout>