<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/changePwTop"
        style="@style/title_relayout" >

        <Button
            android:id="@+id/newPwBack"
            style="@style/back_btn" />

        <TextView
            android:id="@+id/newPwBackText"
            style="@style/back_text"
            android:layout_toRightOf="@+id/newPwBack" />

        <TextView
            android:id="@+id/newPwTitle"
            style="@style/title_text"
            android:text="@string/resetpw" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/changePwli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changePwTop"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/changePwHint"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="请重设您的密码（6-20个字符）"
                android:textColorHint="#02AFEF"
                android:textSize="16sp" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/changePwline"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D7D7D7"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/changePw_tx_li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/newPwId"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/newpassword"
                android:inputType="textPassword"
                android:textColorHint="#CDCDC1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/newPwText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:visibility="invisible"
                android:text="@string/id_true"
                android:textColor="#ff0000" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/registerline1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D7D7D7"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/changePwAuth_tx_li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/truePwNew"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/truepassword"
                android:inputType="textPassword"
                android:textColorHint="#CDCDC1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/truePwNewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/pstrue"
                android:visibility="invisible"
                android:textColor="#ff0000" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/newPwBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/changePwli"
        android:layout_margin="20dp"
        android:background="@drawable/btn_bg"
        android:includeFontPadding="false"
        android:text="@string/submit"
        android:textColor="#ffffff" />

</RelativeLayout>
